--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,7 @@
+body {
+  background-image: url(../img/minecraft_background.jpg);
+}
+
 header {
   font-family: Minecraft;
   font-size: 24px;
@@ -12,6 +16,8 @@ body {
 .container {
   margin: 10px 250px;
   border: 1px solid lightgrey;
+  background-color: rgb(247, 243, 243);
+  opacity: 0.95;
   display: grid;
   grid-template-rows: 20vh 60vh 10vh;
   grid-gap: 20px;
@@ -30,7 +36,6 @@ input[type='range'] {
   appearance: none;
   height: 0.5em;
   border-radius: 5em;
-  left: 4em;
   outline: none;
   cursor: pointer;
 }
@@ -60,7 +65,7 @@ input[id='bValueRange'] {
 input[type='text'] {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
-  width: 4em;
+  width: 3em;
 }
 
 .finalColor {
