--- a/css/base.css
+++ b/css/base.css
@@ -4,7 +4,7 @@ body {
 
 header {
   font-family: Minecraft;
-  font-size: 24px;
+  font-size: 26px;
   text-align: center;
 }
 
@@ -16,8 +16,8 @@ body {
 .container {
   margin: 10px 250px;
   border: 1px solid lightgrey;
-  background-color: rgb(247, 243, 243);
-  opacity: 0.95;
+  background-color: rgb(85, 68, 68);
+  color: rgb(240, 232, 232);
   display: grid;
   grid-template-rows: 20vh 60vh 10vh;
   grid-gap: 20px;
@@ -66,6 +66,13 @@ input[type='text'] {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
   width: 3em;
+}
+
+#rgbInput {
+  margin: 20px auto;
+  width: 250px;
+  height: 25px;
+  text-align: center;
 }
 
 .finalColor {
