--- a/css/reset.css
+++ b/css/reset.css
@@ -1,14 +1,7 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html,
 body,
 div,
 span,
-applet,
-object,
 iframe,
 h1,
 h2,
@@ -17,73 +10,28 @@ h4,
 h5,
 h6,
 p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
 img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
 strike,
 strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
 center,
-dl,
-dt,
-dd,
 ol,
 ul,
 li,
-fieldset,
 form,
 label,
-legend,
 table,
 caption,
-tbody,
-tfoot,
-thead,
 tr,
 th,
 td,
-article,
 aside,
 canvas,
-details,
-embed,
-figure,
-figcaption,
 footer,
 header,
-hgroup,
 menu,
 nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+section
+{
   margin: 0;
   padding: 0;
   border: 0;
@@ -92,14 +40,8 @@ video {
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-hgroup,
 menu,
 nav,
 section {
@@ -111,17 +53,6 @@ body {
 ol,
 ul {
   list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
 }
 table {
   border-collapse: collapse;
